Fixed color/layout issues on form

--- a/lor-style.css
+++ b/lor-style.css
@@ -28,6 +28,7 @@ a:visited {
   text-decoration: none;
   weight: 500;
 }
+
 a:hover {
   color: #668890;
   text-decoration: underline;
@@ -92,7 +93,7 @@ p {
 .menu-container {
   color: #AAA;
   font-family: 'Helvetica', 'Arial', sans-serif;
-  background-color: #444444;
+  background-color: #444;
   padding: 10px 20px 10px 20px;
   display: flex;
   justify-content: space-between;
@@ -151,18 +152,16 @@ a:visited {
 /* styles input form */
 .form-container {
   color: #414141;
-  background-color: #EEEEEE;
-  padding: 20px 10px 20px 10px;
+  background-color: #EEE;
+  padding: 20px 1px 20px 1px;
   display: flex;
   justify-content: center;
   flex-direction: column;
 }
 
-/* .input-form {
-  border: 1px solid #fff;  /* For debugging */
-  /* display: flex;
-  justify-content: flex-start;
-} */
+.input-form {
+  /* border: 1px solid #fff;  /* For debugging */
+}
 
 .form-row {
   margin-bottom: 40px;
@@ -223,8 +222,8 @@ a:visited {
   font-size: 16px;
   font-weight: bold;
 
-  color: #FFFFFF;
-  background-color: #A2D5B3;
+  color: #BBCADA;
+  background-color: #444;
 
   border: none;
   border-radius: 3px;
@@ -234,7 +233,7 @@ a:visited {
 }
 
 .form-row button:hover {
-  background-color: #82B593;
+  background-color: #668890;
 }
 
 .form-row button:active {
@@ -297,7 +296,6 @@ a:visited {
   .form-row {
     flex-direction: row;
     align-items: flex-start;
-    margin-bottom: 20px;
   }
 
   .form-row input[type='text'],
